trying to fix bug with schemas for POST and PUT in Swagger
